plang/testing/logs/false-incorrect/36/program36.p.p
k6k4o Qa (qxbl) Rf :- c uSUY.

b.
z nT.

ci6gz xuA :- (e qyAP M2w (f4) (D)), sH ice iV85K (rwpcf (JkJ) (CtQ) (b4UF) fRO2) QiV1.


kz fawt5 Qk (td2 NL yrsnQ n4t) (zi (nabS (DNlt) (QGR)) (O)).
v2 PM (Nk59) (aYHEC NH8mm D) K72UK :- (i (Asi) wZ; (vmw (k RE O98U) (hc4))).


rTc2.

aniUh Jc :- (((vvk7A); tTa; a OMRn BgNHA (vn cDQo (dlmj) (C5a)) (yMGFu); (fj17q rQgp j j7 (qeHD (G) sZVA Xt1 nKf); e7U))).


a6J (ci (Ic)) (mo2aY q) fI.


ipnL Um08C sVi KjTwd.


wkr :- gCN (bN y (dRDCY (pxSm (msrh) ysr) H43xE)) KgFbL (ttXb (LK) yre (o AZ6 (P)) uYR).


oE38R (eas (Wg) SBCkq (pE7VG (h Qy a fQ5Xu) CW3Sv) ccg) (qzEH (rlG (mPV0K (Wd2S) (pdR Qrs (fdT2 dKGS Vp) (hmWd Ykn (VDif) (iLBBN (P))) (zp0hk (Js) H0T X HUsw))) (MWN) fS1)).

f.


rZ23t (tJzE Y7l (vbl)) Mb5f c :- q1 lqpSA (iUQQ SYEZ) i19S ZheyJ, z7Oo Y Hm (is (XBp)); tBWm Fk (Rie) kr VVPC, g lYJ AeN CNQz; hlJY Rf5, (yd (Wncdr)); (((t1bn (zxB) t (vgh6d wcB y86L); h3))).

ukJ.
aE.

bFa :- (yqBrk N (Hs) (o (AIAC8)); r1I1 (W) (Ls); e, (gPd (KHbPC) K1 (rGr (i6 i96))), hK9; muJ tM4f); gRR rJTJS (Gtg) beXqU.
s0z :- (t (nLPkg (A0g) rO) Q11 (v) X; c (Dz); r xy iry r (NFF8)); gS; kq8J n6 (VWK) (p qr (b4cZJ a2 (wiX (w (iN3nQ jgI (L3)) (o wEc DNLn Xz ltOIh)) (Imozf) (Fz) RgR31))), iiyR (Nfx) (zupIo (Y)), bVC3E NR3 (aTKw (A) (S6ag5)) tkz (VYb9); qF (M6Kl) jfS (zS) c6xp; q; fpsRy NH KfSh, t7p YJgWd (r76dc yB6qD h), gbcZa (lVRzk Ja3 (S)) OiaXP OMo ZCbDi, kDjv (nwcC) (E6Cb) (y0) YM, pUsl yB8v.

m5S G9t N6VUX (a7fc cfZ3).

nR9h (EyS) ZhK.
eWsxa (tUqtA (C5yy) mV9p4) :- (i (h4D ET kB45u) tJf, (o Y5lE, i (Cl3) CVHr0 (bW Naq))); (kI (Wn) iPA nKvAk (vBodw (U) (ckg1k v (LxFH) (YsJ) (rtzP0 (j))) AbzG3 sltu); zbd (tNpN1 dse (rx gBUF (w ly (DEf3w) Mm (yUxr3)) (N))) (pgJ YMj NdCU), (qep (SB) (L) KU)); xMma1 xWy1v pF (FkBZ) (eoe S).

? (rYz K5Kj (OK) ZWh); (bv9W), (hl6x), (x (T7pGo), dy (Y) Qbfv tFb9); lh2ER ln feHBH hyVMg (B).


